def-files/aprofile/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app01
  labels:
    app: app01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app01
  template:
    metadata:
      labels:
        app: app01
    spec:
      containers:
      - name: app01
        image: ayobamintl/app01:v1.1
        ports:
        - name: app-port
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app01
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app01
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: app01-lb
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app01
  type: LoadBalancer
